--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -33,7 +33,8 @@ section#top.show-for-large.section-article.pad-no-bottom.bg-gray-3.container-ima
       h2.headline-3.text-bold.group--2x With CCMS, the answer is yes.
       .bg-white.pad--lg.drop.pull-down
         p.lead <strong>Get back to solving problems for healthcare.</strong> Let Datica take on the burden of compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment. That expertise is passed on to you through our products and rock-solid BAA.
-        = partial "partials/snippets/button", :locals => { :label => "See how it works", :url => "/cloud-compliance-management-system#cta", :button_classes => "button nomargin", :item_id => "cta_top-products", :icon => "icon-angle-right", :icon_align => "right" }
+        .text-right
+          = partial "partials/snippets/button", :locals => { :label => "See how it works", :url => "/cloud-compliance-management-system#cta", :button_classes => "button nomargin", :item_id => "cta_top-products", :icon => "icon-angle-right", :icon_align => "right" }
 
 .strip-bright
 section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/6OKt8JnNqo86wQIgOqiGcs/232794aa517af9870472dd34726ef595/hex-pattern-dark-bg.svg"
