--- a/source/integration/index.html.slim
+++ b/source/integration/index.html.slim
@@ -22,7 +22,7 @@ section.hide-for-large
     .columns.small-12
       img.lozad.blur-in data-src="#{featured_img}?fit=thumb&w=800&h=400" alt="Woman looking out of a window"
       .bg-white.pad--lg
-        h2.headline-1 Have the stress and complexity of EHR integrations been an obstacle?
+        h2.headline-2 Is the stress and complexity of EHR integrations holding you back?
         h2.headline-3.text-bold.group Activate your digital health product with data from any EHR
         p.lead You've created an amazing healthcare application, now it's time to grow by exchanging data with more EHRs. Datica enables EHR integrations at scale.
         .text-right
@@ -30,7 +30,7 @@ section.hide-for-large
 section#top.show-for-large.section-article.pad-no-bottom.bg-gray-12.container-image--center.lozad data-background-image=featured_img
   .row.align-left.align-middle
     .columns.small-12.medium-6
-      h1.headline-1 Have the stress and complexity of EHR integrations been an obstacle?
+      h1.headline-2 Is the stress and complexity of EHR integrations holding you back?
       h2.headline-3.text-bold.group--2x Activate your digital health product with data from any EHR
       .bg-white.pad--lg.drop.pull-down
         p.lead You've created an amazing healthcare application, now it's time to grow by exchanging data with more EHRs. Datica enables EHR integrations at scale.
@@ -50,58 +50,61 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
   /     p In the past, EHR integration projects have been frustrating obstacles for innovation teams, preventing them from creating breakthrough solutions for overwhelmed medical professionals.
   /     p Integrating with EHRs is an ongoing challenge for digital health solutions. 
   /       strong EHR integration is not just a technology problem, it’s also a people and process problem.
-  .row.align-center
-    .columns.small-12.medium-12.large-8.text-center
-      h2.headline-2 Datica Integration Solutions
-      p.lead Datica's approach to integration has helped a wide range of solutions across the entire spectrum of healthcare.
-  .row.align-center.group--2x
-    .columns.small-12.medium-6.large-5.relative.has-blob
-      .card.container-color--trans.relative.z-5
-        .card-section
-          = inline_svg("cmi-logo-w", class: "icon-size--xlarge")
-          .subhead--spaced CMI
-          h3.headline-4 Compliant Managed Integration
-          p.strip.strip-small.strip-cmi
-          p.lead Scalable, secure data exchange with any EHR
-          p We combine cutting-edge automation of cloud infrastructure security, devOps processes, and interface engines, with our extensive experience in solving healthcare integration problems. All built on a solid foundation of <strong>continuous HIPAA compliance</strong>.
-        .card-divider.card-divider--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CMI", :url => "/compliant-managed-integration/", :button_classes => "button button--light button-inline", :item_id => "product-group-cks", :icon => "icon-chevron-right", :icon_align => "right" }
-      .blob-color.blob-cmi.z-auto data-glow="false"
-    .columns.small-12.medium-6.large-5.align-self-middle
+
+  .row
+    .columns.small-12.large-7
+      h2.headline-1 Datica Integration Solutions
+      p.lead.group Datica's approach to integration has helped a wide range of solutions across the entire spectrum of healthcare.
+  .row
+    .columns.small-12.medium-6.shrink.relative.has-blob
+      .relative.z-5
+        = inline_svg("cmi-logo-w", class: "icon-size--xlarge")
+        / .subhead--spaced CMI
+        h3.headline-4 Compliant Managed Integration
+        p.strip.strip-small.strip-cmi
+        p.lead Scalable, secure data exchange with any EHR
+      / .blob-color.blob-cmi.z-auto data-glow="false"
+  .row
+    .columns.small-12.medium-6.large-6
+      p.lead We combine cutting-edge automation of cloud infrastructure security, devOps processes, and interface engines, with our extensive experience in solving healthcare integration problems. All built on a solid foundation of <strong>continuous HIPAA compliance</strong>.
+      = partial "partials/snippets/button", :locals => { :label => "Learn more about CMI", :url => "/compliant-managed-integration/", :button_classes => "button button--light button-inline", :item_id => "product-group-cks", :icon => "icon-chevron-right", :icon_align => "right" }
+    .columns.small-12.medium-6.large-4
       = partial("partials/cards/quote-customer", :locals => { :customer => data.site.customers['66BznN8Y482iSswswQAice'], :classes => 'nopad bg-gray-11' })
             / <h2 class="headline-3">Get to market faster, beat the competition, and meet compliance requirements&mdash;all with fewer engineering resources.</h2>
-  .row.align-center.align-middle
-    .columns.small-12.medium-6.large-5.relative.has-blob
-      .card.container-color--trans.relative.z-5
-        .card-section
-          = inline_svg("icon-consulting-compass", class: "icon-size--xlarge")
-          .subhead--spaced Services
-          h3.headline-4 Integration Services
-          p.strip.strip-small.strip-services
-          p.lead Expert guidance and project services
-          p Our team of cloud engineers, integration and compliance experts can help you assessyour business challenges, ensure complete compliance on the cloud, integrate with any system, and even migrate your data to a new, efficient, and cost-effective cloud platform.
-        .card-divider.card-divider--flush
-          = partial "partials/snippets/button", :locals => { :label => "Ask about Datica Services", :url => "/compliant-managed-integration#services", :button_classes => "button button--light button-inline", :item_id => "product-group-cpaas", :icon => "icon-chevron-down", :icon_align => "right" }
-      .blob-color.blob-services.z-auto data-glow="false"
-    .columns.small-12.medium-6.large-5
+  .row
+    .columns.small-12.medium-6.shrink.relative.has-blob
+      .relative.z-5
+        = inline_svg("icon-consulting-compass", class: "icon-size--xlarge")
+        / .subhead--spaced Services
+        h3.headline-4 Integration Services
+        p.strip.strip-small.strip-services
+        p.lead Expert guidance and project services
+      / .blob-color.blob-services.z-auto data-glow="false"
+  .row
+    .columns.small-12.medium-6.large-6
+      p.lead.group Our team of cloud engineers, integration and compliance experts can help you assessyour business challenges, ensure complete compliance on the cloud, integrate with any system, and even migrate your data to a new, efficient, and cost-effective cloud platform.
       h4.headline-5 Project Management
       p Our team of project managers provide an expert view into integrated with EHRs and health systems. They will help manage timelines, create project plans, and track deliverables.
       h4.headline-5 Connection Setup and Maintenance
       p Datica’s Integration Engineers will build, configure, test and maintain VPN connections to allow for transmission of HL7 messages.
       h4.headline-5 Interface Build and Configuration
       p We will transform HL7 messages into JSON or FHIR messages to help keep things standard for you across implementations. We have many predesigned channels ready to go.
-
-
+      / = partial "partials/snippets/button", :locals => { :label => "Ask about Datica Services", :url => "/compliant-managed-integration#services", :button_classes => "button button--light button-inline", :item_id => "product-group-cpaas", :icon => "icon-chevron-down", :icon_align => "right" }
+    #form-services.columns.small-12.medium-6.large-4
+      - the_form = data.site.forms['1JUlX2euRSEgu4KuamI6Gq']
+      .card.pad.bg-gray-12.drop
+        h3.headline-5 Start your free consultation today.
+        = partial "partials/snippets/form", :locals => { :the_form => the_form["custom_form"] }
 
 .strip-bright
-.row.align-center.align-middle.group
-  .columns.small-12.medium-6.large-5
-    .callout.drop.group
-      blockquote.quote--serif
-        - quote_services = data.site.quotes['4r9Bmb0l8QiMgKqCagOa0E']
-        = Kramdown::Document.new(quote_services["quote_body"]).to_html
-      - if quote_services.has_key?("related_person")
-        = partial("partials/snippets/person", :locals => { :p => quote_services.related_person } )
+/ .row.align-center.align-middle.group
+/   .columns.small-12.medium-6.large-5
+/     .callout.drop.group
+/       blockquote.quote--serif
+/         - quote_services = data.site.quotes['4r9Bmb0l8QiMgKqCagOa0E']
+/         = Kramdown::Document.new(quote_services["quote_body"]).to_html
+/       - if quote_services.has_key?("related_person")
+/         = partial("partials/snippets/person", :locals => { :p => quote_services.related_person } )
 
 section#integration.section-article.bg-gray-11
   .collection
