--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -13,7 +13,7 @@ collectionName: "product"
 priority: "0.9"
 ---
 - current_page.data.share_image = image_share_platform
-- featured_img = "https://images.ctfassets.net/189dvqdsjh46/4GKMkqZcNGCySO6EAaYAIU/a7116a7de2da363b678930224e79d8b7/thoughtful-businesswoman-by-glass-window-gm555250401-555250401.jpg"
+- featured_img = "https://images.ctfassets.net/189dvqdsjh46/40nTU46iGkIsck8qEa0qcm/f7a9bab25f465f62ad6043a53744aaef/group_working_on_computer_-_istockphoto-835579140-edit_2__pale_right.jpg"
 
 /= partial "partials/snippets/platform-icons"
 section.hide-for-large
@@ -21,20 +21,18 @@ section.hide-for-large
     .columns.small-12
       img.lozad.blur-in data-src="#{featured_img}?fit=thumb&w=800&h=400" alt="Woman looking out of a window"
       .bg-white.pad--lg
-        h1.headline-1 Can your app pass a HITRUST audit?
+        h1.headline-1 Can your business pass a HITRUST audit?
         h2.headline-3.text-bold.group With CCMS, the answer is yes.
         p.lead <strong>Get back to solving problems for healthcare.</strong> Let Datica take on the burden of compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment. That expertise is passed on to you through our products and rock-solid BAA.
-        .text-right
-          = partial "partials/snippets/button", :locals => { :label => "See how it works", :url => "/cloud-compliance-management-system#cta", :button_classes => "button nomargin", :item_id => "cta_top-products", :icon => "icon-angle-right", :icon_align => "right" }
+        = partial "partials/snippets/button", :locals => { :label => "Get started", :url => "/cloud-compliance-management-system#cta", :button_classes => "button nomargin", :item_id => "cta_top-products", :icon => "icon-chevron-right", :icon_align => "right" }
 section#top.show-for-large.section-article.pad-no-bottom.bg-gray-3.container-image--center.lozad data-background-image=featured_img
-  .row.align-left.align-middle
+  .row.align-right.align-middle
     .columns.small-12.medium-6
-      h1.headline-1 Can your app pass a HITRUST audit?
-      h2.headline-3.text-bold.group--2x With CCMS, the answer is yes.
+      h1.headline-1.text-bold.text-shadow.group--2x Can your business pass a HITRUST audit?
       .bg-white.pad--lg.drop.pull-down
+        h2.headline-3.text-bold With CCMS, the answer is yes.
         p.lead <strong>Get back to solving problems for healthcare.</strong> Let Datica take on the burden of compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment. That expertise is passed on to you through our products and rock-solid BAA.
-        .text-right
-          = partial "partials/snippets/button", :locals => { :label => "See how it works", :url => "/cloud-compliance-management-system#cta", :button_classes => "button nomargin", :item_id => "cta_top-products", :icon => "icon-angle-right", :icon_align => "right" }
+        = partial "partials/snippets/button", :locals => { :label => "Get started", :url => "/cloud-compliance-management-system#cta", :button_classes => "button nomargin success", :item_id => "cta_top-products", :icon => "icon-chevron-right", :icon_align => "right" }
 
 .strip-bright
 section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/6OKt8JnNqo86wQIgOqiGcs/232794aa517af9870472dd34726ef595/hex-pattern-dark-bg.svg"
