--- a/source/integration/index.html.slim
+++ b/source/integration/index.html.slim
@@ -12,6 +12,7 @@ collectionName: "product"
 # collectionOrder: 2
 priority: "0.9"
 ---
+- current_page.data.asset_preload = '<link href="' + bg_product_dark + '" rel="preload" as="image" />'
 - current_page.data.share_image = image_share_platform
 - featured_img = "https://images.ctfassets.net/189dvqdsjh46/62MYHqth60wmUosWQQ0es8/470d9a7b58ffede77ae3d064cf86b655/office_-_istockphoto-626637134_edit.jpg"
 / = partial "partials/snippets/platform-icons"
@@ -37,7 +38,7 @@ section#top.show-for-large.section-article.pad-no-bottom.bg-gray-12.container-im
 
 / section#top.section-article.bg-gray-11.container-image-fill.lozad data-background-image="?fit=crop&w=1600&h=800"
 
-section#products.section-article.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/6OKt8JnNqo86wQIgOqiGcs/232794aa517af9870472dd34726ef595/hex-pattern-dark-bg.svg"
+section#products.section-article.bg-gray-3.container-image-fill.lozad data-background-image=bg_product_dark
   / .row
   /   .columns.small-12.medium-12.large-8
   /     h2.headline-2.text-bold Get back to solving problems for heathcare
@@ -80,7 +81,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
   .row
     .columns.small-12.medium-6.large-6
       p.lead.group Our team of cloud engineers, integration and compliance experts can help you assessyour business challenges, ensure complete compliance on the cloud, integrate with any system, and even migrate your data to a new, efficient, and cost-effective cloud platform.
-      = partial "partials/snippets/button", :locals => { :label => "Ask about Datica Services", :url => "/compliant-managed-integration#services", :button_classes => "button button--light button-inline", :item_id => "product-group-cpaas", :icon => "icon-chevron-right", :icon_align => "right" }
+      = partial "partials/snippets/button", :locals => { :label => "Ask about Datica Services", :url => "/compliant-managed-integration#services", :button_classes => "button button--light button-inline", :item_id => "product-group-cpaas", :icon => "icon-chevron-down", :icon_align => "right" }
     .columns.small-12.medium-6.large-4
       h4.headline-5 Project Management
       p Our team of project managers provide an expert view into integrated with EHRs and health systems. They will help manage timelines, create project plans, and track deliverables.
@@ -110,28 +111,16 @@ section#integration.section-article.bg-gray-11
             p.lead.line-length.margin-auto = collection.desc
       = partial "/partials/content/collection-list", :locals => { :collection => collection }
 
-      /= partial "partials/snippets/button", :locals => { :label => "Learn more about EHR integration", :url => "/discover/ehr-integrations/", :button_classes => "button hollow", :item_id => "integration" }
-
-
-  / .row.align-center.align-middle
-    .columns.flex-container.align-middle.align-center.small-12.medium-6.large-4.text-center.pad--xl
-      img.lozad data-src="http://images.ctfassets.net/189dvqdsjh46/2yyrhvg12wySaoSgyQ6C6G/0ec44a3443d3e89690e511f8f85d44fe/guide-tco-compliance-2018-thumb.png?fit=thumb&w=500&h=500" alt="Guide" width="250"
-    .columns.small-12.medium-6.large-6
-      .line-length
-        h3.headline-3.text-bold.nomargin Datica Guides
-        p.lead Datica Guides are written by experts in healthcare technology, compliance, and security.
-        
-
-
-.strip-bright
-
-/ aside#ctaBottom.container-color--dark-grad-blue
-  .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
-    .row.align-center
-      .columns.small-12.medium-10.large-10.text-center
-        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
-    .row.align-center
-      .columns.small-6.large-4.text-right
-        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
-      .columns.small-6.large-6.text-left
-       = partial "partials/snippets/button", :locals => { :label => "Learn About Datica CKS", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right", :item_id => "page-bottom", :data_track_group => "cks" }
+.strip.strip-cmi
+aside#ctaBottom.bg-gray-3.section-article.container-image--center.lozad data-background-image=bg_product_dark
+  .relative.has-blob
+    .relative.z-5
+      .row.align-center.group--sm
+        .columns.small-12.medium-10.large-10.text-center
+          h2.headline-3 Don't let the stress of EHR integrations hold you back.
+      .row.align-center
+        .columns.shrink
+          = partial "partials/snippets/button", :locals => { :label => "Learn more about EHR integration", :url => "/discover/ehr-integrations", :button_classes => "button hollow-inverted" }
+        .columns.shrink
+          = partial "partials/snippets/button", :locals => { :label => "Start your integration project today", :url => "/compliant-managed-integration/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right", :item_id => "page-bottom", :data_track_group => "cmi" }
+    .blob-color.blob-cmi.z-auto data-glow="false"
