Link fix, HITRUST

--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -115,7 +115,7 @@ aside#ctaBottom.bg-gray-3.section-article.container-image--center.lozad data-bac
           h2.headline-3 HITRUST audit? No problem.
       .row.align-center
         .columns.shrink
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about HITRUST compliance", :url => "/discover/hipaa-compliance/", :button_classes => "button hollow-inverted" }
+          = partial "partials/snippets/button", :locals => { :label => "Learn more about HITRUST compliance", :url => "/discover/hitrust/", :button_classes => "button hollow-inverted" }
         .columns.shrink
           = partial "partials/snippets/button", :locals => { :label => "Get started with CCMS", :url => "/cloud-compliance-management-system/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right", :item_id => "page-bottom", :data_track_group => "ccms" }
     .blob-color.blob-ccms.z-auto data-glow="false"
