--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -81,7 +81,7 @@ section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad
 section.section-article.pad-no-bottom.bg-gray-12
   .row.align-center.align-middle.group--2x
     .columns.small-12.large-8.text-center
-      h2.headline-4 Datica helps you comply with multiple compliance frameworks.
+      h2.headline-4.group Datica helps you comply with multiple compliance frameworks.
       .row.medium-up-5.align-middle.align-center
         - data.views.home.badges.each do |logo|
           - logo.logoSize == "xlarge" ? logopad = "pad--sm" : nil
